syntax = "proto3"; 
option csharp_namespace = "GrpcShared"; 
package PeoplePackage; 

service People { 
	rpc GetAll (GetAllPeopleRequest) returns (PeopleReply); 
	rpc GetAllStream (GetAllPeopleStreamRequest) returns (stream Person); 
	rpc GetPersonById (GetPersonByIdRequest) returns (Person);
} 

message GetAllPeopleStreamRequest {
	Person person = 1;
}

message GetAllPeopleRequest {

}

message GetPersonByIdRequest {
	int32 id = 1;
}

message PeopleReply { 
	repeated Person people = 1; 
} 

message Person { 
	int32 id = 1; 
	string firstName = 2; 
	string lastName = 3; 
	string bio = 4; 
	string photoUrl = 5; 
}
